Update Privacy Policy to Terms of Service

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Netspeed Lite</title>
+    <title>Terms of Service - Netspeed Lite</title>
     <style>
         :root {
             --primary-color: #2196F3;
@@ -79,93 +79,51 @@
 </head>
 
 <body>
-    <h1>Privacy Policy</h1>
-    <p class="last-updated">Last Updated: February 19, 2026</p>
-    <p>Welcome to <strong>Netspeed Lite</strong>. We respect your privacy and are committed to protecting it. This
-        policy explains what data our app accesses and how it is used.</p>
+    <h1>Terms of Service</h1>
+    <p class="last-updated">Last Updated: February 23, 2026</p>
+    <p>Welcome to <strong>Netspeed Lite</strong>. By downloading, accessing, or using our app, you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, please do not use the application.</p>
 
-    <h4 style="color:var(--primary-color)">1. Data Collection &amp; Usage</h4>
+    <h4 style="color:var(--primary-color)">1. User Agreement &amp; Acceptance</h4>
+    <p>By using Netspeed Lite, you confirm that you have read, understood, and agreed to be bound by these Terms. These Terms apply to all users, visitors, and others who access or use the Service.</p>
+
+    <h4 style="color:var(--primary-color)">2. Description of Service</h4>
+    <p>Netspeed Lite provides real-time internet speed monitoring and per-app data usage tracking. The application displays your connection speed in the status bar and calculates historical network consumption based on your device's internal logs.</p>
     <ul>
-        <li><strong>No Personal Data:</strong> We (the developer) do not collect, store, or share any personally
-            identifiable information (PII), browsing history, or IP addresses.</li>
-        <li><strong>Network Usage Stats:</strong> We use the <em>Usage Access</em> permission solely to read your
-            device's historical network traffic logs. This processing happens 100% locally on your device.</li>
-        <li><strong>Per-App Data Usage:</strong> We resolve installed app names and icons locally on your device to
-            display per-app data consumption. No app list or usage data is transmitted externally.</li>
-        <li><strong>Local Storage:</strong> Your preferences (theme, icon style, notification theme, dynamic color
-            settings, data limits) and manually tracked data counters are stored locally using Android
-            SharedPreferences. This data never leaves your device.</li>
-        <li><strong>Advertising ID:</strong> We access the Google Advertising ID to serve personalized ads via Google
-            AdMob. This identifier may be reset or opted out of by you at any time in your device's settings.</li>
+        <li><strong>Accuracy:</strong> Data usage statistics provided by Netspeed Lite are estimates based on your Android device's internal system logs and interpolation algorithms. These figures may slightly differ from your mobile carrier's official billing records.</li>
+        <li><strong>Non-Binding:</strong> The utility is for informational purposes only. We are not liable for any data overage charges, billing discrepancies, or penalties imposed by your network provider.</li>
     </ul>
 
-    <h4 style="color:var(--primary-color)">2. Permissions</h4>
-    <p>This app requires the following permissions to function:</p>
+    <h4 style="color:var(--primary-color)">3. Premium Subscriptions &amp; In-App Purchases</h4>
+    <p>Netspeed Lite offers optional premium features (such as dynamic notification colors, custom icons, notification themes, and an ad-free experience) available through monthly subscriptions or one-time lifetime purchases.</p>
     <ul>
-        <li><strong>INTERNET:</strong> Required for the speed meter to measure active network throughput and to serve
-            advertisements.</li>
-        <li><strong>ACCESS_NETWORK_STATE &amp; ACCESS_WIFI_STATE:</strong> Required to detect connection type
-            (Wi-Fi/Mobile) and Wi-Fi signal strength.</li>
-        <li><strong>ACCESS_FINE_LOCATION / ACCESS_COARSE_LOCATION:</strong> Required by Android to read Wi-Fi signal
-            strength (RSSI). We use this <strong>strictly</strong> for signal strength and do <strong>not</strong>
-            collect or track your location.</li>
-        <li><strong>FOREGROUND_SERVICE_SPECIAL_USE:</strong> Required to keep the speed meter running persistently in
-            the status bar notification.</li>
-        <li><strong>PACKAGE_USAGE_STATS (Usage Access):</strong> Required to display historical data usage.</li>
-        <li><strong>QUERY_ALL_PACKAGES:</strong> Required to resolve app names/icons in the Data Usage screen.</li>
-        <li><strong>POST_NOTIFICATIONS:</strong> Required to show the live speed indicator and data alerts.</li>
-        <li><strong>BILLING:</strong> Required for in-app purchases.</li>
-        <li><strong>AD_ID:</strong> Required for advertising.</li>
+        <li><strong>Billing:</strong> All payments are processed securely through Google Play Billing. We do not store, access, or process your financial information.</li>
+        <li><strong>Subscriptions:</strong> Subscriptions automatically renew unless canceled at least 24 hours before the end of the current period. You can manage and cancel your subscriptions at any time in your Google Play Store account settings.</li>
+        <li><strong>Refunds:</strong> Refund policies for in-app purchases are governed by Google Play's standard refund policy. Please refer to Google Play support for refund requests.</li>
     </ul>
 
-    <h4 style="color:var(--primary-color)">3. Restricted Permissions Disclosure</h4>
-    <p><strong>Usage Access &amp; Query All Packages:</strong> Netspeed Lite uses the <em>Usage Access</em> and
-        <em>Query All Packages</em> permissions exclusively to provide the core functionality of real-time internet
-        speed monitoring and per-app data usage tracking. This data is processed locally on your device and is
-        <strong>never</strong> transmitted to our servers or third parties.</p>
-
-    <h4 style="color:var(--primary-color)">4. Third-Party Services</h4>
-    <p>We use the following third-party services which may collect data as described below:</p>
+    <h4 style="color:var(--primary-color)">4. User Conduct &amp; Acceptable Use</h4>
+    <p>You agree not to engage in any of the following prohibited activities:</p>
     <ul>
-        <li><strong>Google AdMob:</strong> Collects user identifiers (Advertising ID), IP address, and <strong>app
-                performance data (crash logs, diagnostics)</strong> to serve ads, prevent fraud, and ensure stability.
-            <a href="https://policies.google.com/technologies/ads">Privacy Policy</a>.</li>
-        <li><strong>Google Play Billing:</strong> Processes payments securely. We do not access your financial data. <a
-                href="https://policies.google.com/privacy">Privacy Policy</a>.</li>
-        <li><strong>Google Play In-App Review API:</strong> We may use the Google Play In-App Review API to prompt you
-            for a rating. This SDK is provided by Google and may send anonymized identifiers to Google. No personal data
-            is shared by us.</li>
+        <li>Attempting to reverse engineer, decompile, or otherwise extract the source code of the app.</li>
+        <li>Interfering with or disrupting the integrity or performance of the app.</li>
+        <li>Attempting to bypass, exploit, or maliciously modify the app's billing or premium entitlement systems.</li>
     </ul>
 
-    <h4 style="color:var(--primary-color)">5. In-App Purchases &amp; Premium</h4>
-    <p>Netspeed Lite offers optional premium features (custom icon styles, dynamic speed-based notification colors,
-        notification themes, and an ad-free experience) available through a monthly subscription or a one-time lifetime
-        purchase. Watching a rewarded ad also grants temporary premium access. Purchase status and temporary access
-        expiry are stored locally on your device. All billing is processed securely through Google Play.</p>
+    <h4 style="color:var(--primary-color)">5. Third-Party Services</h4>
+    <p>Netspeed Lite may contain links to third-party services, including Google AdMob for advertisement serving. We have no control over, and assume no responsibility for, the content, privacy policies, or practices of any third-party services. Your interactions with these services are governed by their respective terms and policies.</p>
 
-    <h4 style="color:var(--primary-color)">6. Data Retention &amp; Security</h4>
-    <p>All app data is stored locally. We use no external servers. Data sent to third-party services (AdMob/Google Play)
-        is encrypted in transit.</p>
+    <h4 style="color:var(--primary-color)">6. Disclaimers &amp; Limitation of Liability</h4>
+    <p>The app is provided on an "AS IS" and "AS AVAILABLE" basis. We make no warranties, expressed or implied, regarding the accuracy, reliability, or uninterrupted availability of the service.</p>
+    <p>In no event shall the developer be liable for any indirect, incidental, special, consequential, or punitive damages, including without limitation, loss of data, use, or other intangible losses, resulting from your use or inability to use the service.</p>
 
-    <h4 style="color:var(--primary-color)">7. Children's Privacy</h4>
-    <p>This app is not directed at children under 13. We do not knowingly collect personal info from children.</p>
+    <h4 style="color:var(--primary-color)">7. Termination</h4>
+    <p>We may terminate or suspend your access to the app immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach these Terms of Service.</p>
 
-    <h4 style="color:var(--primary-color)">8. Your Rights</h4>
-    <p>You have full control over your local data by clearing app storage. For third-party ad data, you can opt out of
-        personalized advertising in your device settings.</p>
+    <h4 style="color:var(--primary-color)">8. Changes to Terms</h4>
+    <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. Any changes will be reflected with a new "Last Updated" date. By continuing to use the app after changes become effective, you agree to the revised terms.</p>
 
-    <h4 style="color:var(--primary-color)">9. Disclaimer</h4>
-    <p><strong>Netspeed Lite</strong> is provided "AS IS". The data usage statistics provided by this app are estimates
-        based on your device's internal logs and interpolation algorithms. These figures may differ from your mobile
-        carrier's official billing records. We do not guarantee 100% accuracy and are not liable for any data overage
-        charges incurred.</p>
-
-    <h4 style="color:var(--primary-color)">10. Changes to This Policy</h4>
-    <p>We may update this Privacy Policy from time to time. Any changes will be reflected with a new "Last Updated" date
-        within the app. Continued use of the app after changes constitutes acceptance of the revised policy.</p>
-
-    <h4 style="color:var(--primary-color)">11. Contact Us</h4>
-    <p>If you have questions about this policy, please contact us at <a href="mailto:contact.krishna.apps@gmail.com"><b>
+    <h4 style="color:var(--primary-color)">9. Contact Us</h4>
+    <p>If you have any questions about these Terms of Service, please contact us at <a href="mailto:contact.krishna.apps@gmail.com"><b>
                 <font color="#03A9F4">contact.krishna.apps@gmail.com</font>
             </b></a>.</p>
 </body>
