Update last updated date and permissions descriptions

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <body>
     <h1>Privacy Policy</h1>
-    <p class="last-updated">Last Updated: February 19, 2026</p>
+    <p class="last-updated">Last Updated: February 24, 2026</p>
     <p>Welcome to <strong>Netspeed Lite</strong>. We respect your privacy and are committed to protecting it. This
         policy explains what data our app accesses and how it is used.</p>
 
@@ -112,15 +112,14 @@
         <li><strong>FOREGROUND_SERVICE_SPECIAL_USE:</strong> Required to keep the speed meter running persistently in
             the status bar notification.</li>
         <li><strong>PACKAGE_USAGE_STATS (Usage Access):</strong> Required to display historical data usage.</li>
-        <li><strong>QUERY_ALL_PACKAGES:</strong> Required to resolve app names/icons in the Data Usage screen.</li>
+        <li><strong>App Visibility:</strong> Required to resolve app names/icons in the Data Usage screen for installed user apps.</li>
         <li><strong>POST_NOTIFICATIONS:</strong> Required to show the live speed indicator and data alerts.</li>
         <li><strong>BILLING:</strong> Required for in-app purchases.</li>
         <li><strong>AD_ID:</strong> Required for advertising.</li>
     </ul>
 
     <h4 style="color:var(--primary-color)">3. Restricted Permissions Disclosure</h4>
-    <p><strong>Usage Access &amp; Query All Packages:</strong> Netspeed Lite uses the <em>Usage Access</em> and
-        <em>Query All Packages</em> permissions exclusively to provide the core functionality of real-time internet
+    <p><strong>Usage Access:</strong> Netspeed Lite uses the <em>Usage Access</em> permission exclusively to provide the core functionality of real-time internet
         speed monitoring and per-app data usage tracking. This data is processed locally on your device and is
         <strong>never</strong> transmitted to our servers or third parties.</p>
 
